ProjectDialogController done